# supernote-templates

./: .gitignore  LICENSE  Makefile  Procfile  README.md  flake.nix  go.mod  main.go  main.py  page_4mm_dot_grid.py  page_5mm_dot_grid.py  page_daily_planner.py  page_daily_planner_manta.py  page_dayfree.py  page_planner_daily.py  planner_daily.py  pyproject.toml  remarkable_2.py  supernote_manta.py  supernote_nomad.py  utils.py
